name:                pure-elm
version:             0.8.0.0
synopsis:            An implementation of the Elm architecture for Pure.
homepage:            purehs.org/doc/pure-elm
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-elm.git

library
  exposed-modules: Pure.Elm
                   Pure.Elm.Application
                   Pure.Elm.Memo
                   Pure.Elm.Sub

  build-depends:       base,
                       pure,
                       pure-router,
                       pure-txt,
                       containers,
                       stm

  hs-source-dirs:      src

  if (impl(ghcjs))
    js-sources: js/hostname.js

  default-language:    Haskell2010
